Parte 4 e anteriores concluidas

--- a/html/index.html
+++ b/html/index.html
@@ -23,6 +23,7 @@
         <input type="button" value="Submit" id="time_red">
 
       </form>
+      <div id="gols_red"></div>
       <div id="canvas">
         <canvas class="canvas_tela"></canvas>
         <input type="button" value="start" id="start">
@@ -35,11 +36,12 @@
           <input type="number" name="velocidade_blue" id="velocidade_blue" placeholder="Velocidade das Bolas">
           <input type="button" value="Submit" id="time_blue">
 
-        </form>
       </form>
+      <div id="gols_blue"></div>
     </main>
     
 
-    <script src="main.js" type="module"></script>
+    <script src="../scripts/main.js" type="module"></script>
+
   </body>
 </html>
